--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <body>
     <form class="naGot" onsubmit="return false">
         Text to be trimmed <br>
-        <input id="test" type="text">
+        <input id="trimText" type="text">
         <input type="submit" class="nameButton"></button>
     </form>
-    <div id="result" style="height:fit-content; background-color:blue"></div>
+    <p id="result">Trimmed text here</p>
             <script
             src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
