Made the program work but kinda

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8">
     <title>Discord Spam Helper</title>
-    
   </head>
   <body>
     <form class="naGot" onsubmit="return false">
@@ -12,6 +11,7 @@
         <input type="submit" class="nameButton"></button>
     </form>
     <p id="result">Trimmed text here</p>
+    <ul id="spamCont"></ul>
             <script
             src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
