--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Discord Spam Helper</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" rel="stylesheet">
+    <link href="./resources/css/style.css" rel="stylesheet">
   </head>
   <body>
     <form class="naGot" onsubmit="return false">
