Design stuff but button hover is br0ke

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <form class="naGot" onsubmit="return false">
         <textarea placeholder="text to be trimmed" id="trimText"></textarea>
-        <button class="nameButton"></button>
+        <button class="nameButton">Trim</button>
     </form>
     <p id="result">Trimmed text here</p>
     <ul id="spamCont"></ul>
