Began working on chrCont chooser, added checklist of stuff to do

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   <body>
     <form class="naGot" onsubmit="return false">
         <textarea placeholder="text to be trimmed" id="trimText"></textarea>
+        <input type="text" id="trimAmnt">
         <button class="nameButton">Trim</button>
     </form>
     <p id="result">Trimmed text here</p>
     <ul id="spamCont"></ul>
+    <span id="toDo">To do list: <br>Add chrcont chooser<br>Fix html element errors<br>Add dark mode<br>Make it adaptive<br>Add heading</span>
             <script
             src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
