added WIP emoji mode button

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
         <span class="chrHead">Characters to trim to:</span>
         <input autocomplete="off" placeholder="2000"type="text" id="trimAmnt">
         <button id="dark">Dark</button>
+        <button id="emoji">Emoji</button>
         <button class="nameButton">Trim</button>
     </form>
     <p id="result">Trimmed text here</p>
     <ul id="spamCont"></ul>
-    <span id="toDo">To do list:<br>Make it adaptive<br>Add heading</span>
+    <span id="toDo">To do list:<br>Emoji mode<br>Add favicon<br>Make it adaptive<br>Add heading</span>
             <script
             src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
